# jetson-libraries

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
.github/: FUNDING.yml
libraries/mediapipe/l4t32.7.1/py3.10.11/mp0.10.7/: Dockerfile  docker-compose.yml
libraries/mediapipe/l4t32.7.1/py3.10.11/mp0.10.7/build_mediapipe/: Dockerfile
libraries/mediapipe/l4t32.7.1/py3.6.8/mp0.8.5/: Dockerfile  gpu_test_pose.py
libraries/mediapipe/l4t32.7.1/py3.6.9/mp0.8.5/: Dockerfile  docker-compose.yml
libraries/mediapipe/l4t32.7.1/py3.8.0/mp0.10.7/: Dockerfile  docker-compose.yml
libraries/mediapipe/l4t32.7.1/py3.8.0/mp0.10.7/build_mediapipe/: Dockerfile  docker-compose.yml
libraries/mediapipe/l4t35.4.1/py3.8.10/mp0.10.7/: Dockerfile  docker-compose.yml
libraries/mediapipe/l4t35.4.1/py3.8.10/mp0.10.7/build_mediapipe/: Dockerfile  docker-compose.yml
libraries/mediapipe/test_scripts/: multipose_gpu_mp0.10.x.py
libraries/mediapipe/ubuntu18.04/py3.10.11/mp0.10.7/: Dockerfile
libraries/ml/l4t36.4.0/py3.10.12/ocv4.10.0-onnx1.20.2-trt10.3.0/: Dockerfile
libraries/ml/l4t36.4.0/py3.10.12/ocv4.10.0-onnx1.20.2-trt10.3.0-pt2.6.0/: Dockerfile
libraries/ml/ubuntu22.04/cu12.6/py3.10.12/ocv4.10.0-onnx1.20.2-trt10.3.0/: Dockerfile
libraries/ml/ubuntu22.04/cu12.6/py3.10.12/ocv4.10.0-onnx1.20.2-trt10.3.0-pt2.6.0/: Dockerfile
libraries/ml/ubuntu22.04/cu12.8/py3.10.12/ocv4.10.0-pt2.8.0/: Dockerfile
libraries/onnxruntime/: test.py
libraries/onnxruntime/l4t36.4.0/py3.10.12/ocv4.10.0/onnx1.20.2/: Dockerfile
libraries/onnxruntime/l4t36.4.0/py3.10.12/onnx1.20.2/: Dockerfile
libraries/onnxruntime/ubuntu22.04/py3.10.12/ocv4.10.0/onnx1.20.2/: Dockerfile
libraries/onnxruntime/ubuntu22.04/py3.10.12/onnx1.20.2/: Dockerfile
libraries/opencv/: README.md
libraries/opencv/l4t32.7.1/py3.10.11/ocv4.8.0/: Dockerfile  docker-compose.yml
libraries/opencv/l4t32.7.1/py3.10.11/ocv4.8.0/build_opencv/: Dockerfile
libraries/opencv/l4t32.7.1/py3.6.9/ocv4.8.0/: Dockerfile
libraries/opencv/l4t32.7.1/py3.8.0/ocv4.8.0/: Dockerfile  docker-compose.yml
libraries/opencv/l4t32.7.1/py3.8.0/ocv4.8.0/build_opencv/: Dockerfile
libraries/opencv/l4t32.7.1/test_scripts/: test_opencv_build.py
libraries/opencv/l4t35.4.1/py3.6.15/ocv4.8.0/: Dockerfile  OpenCV-4.8.0-aarch64.sh  docker-compose.yml
libraries/opencv/l4t35.4.1/py3.6.15/ocv4.8.0/build_opencv/: Dockerfile  build_opencv.sh
libraries/opencv/l4t35.4.1/py3.8.10/: Dockerfile  OpenCV-4.8.0-aarch64.sh
libraries/opencv/l4t35.4.1/py3.8.10/build_opencv/: Dockerfile  build_opencv.sh
libraries/opencv/l4t36.2.0/py3.10.12/ocv4.10.0/: Dockerfile  docker-compose.yml  mytest_gstreamer.py
libraries/opencv/l4t36.2.0/py3.10.12/ocv4.10.0/build_opencv/: Dockerfile  build_opencv.sh
libraries/opencv/l4t36.3.0/py3.10.12/ocv4.10.0/: docker-compose.yml  mytest_gstreamer.py
libraries/opencv/l4t36.3.0/py3.10.12/ocv4.10.0/build_opencv/: Dockerfile
libraries/opencv/l4t36.4.0/py3.10.12/ocv4.10.0/: Dockerfile
libraries/opencv/l4t36.4.0/py3.10.12/ocv4.10.0/build_opencv/: Dockerfile  build_opencv.sh
libraries/opencv/test_scripts/: mytest_deepstream.py  mytest_gstreamer.py  mytest_new_ocv_gs.py  mytest_opencv_build.py
libraries/opencv/ubuntu18.04/py3.10.11/ocv4.8.0/: Dockerfile  OpenCV-4.8.0-x86_64.sh
libraries/opencv/ubuntu18.04/py3.10.11/ocv4.8.0/build_opencv/: .gitattributes  Dockerfile  build_opencv.sh
libraries/opencv/ubuntu22.04/cu12.2/py3.10.12/: Dockerfile  docker-compose.yml  mytest_gstreamer.py
libraries/opencv/ubuntu22.04/cu12.2/py3.10.12/build_opencv/: Dockerfile  build_opencv.sh
libraries/opencv/ubuntu22.04/cu12.4/py3.10.12/build_opencv/: Dockerfile  build_opencv.sh
libraries/opencv/ubuntu22.04/cu12.6/py3.10.12/ocv4.10.0/: Dockerfile
libraries/opencv/ubuntu22.04/cu12.8/py3.10.12/ocv4.10.0/: Dockerfile
libraries/opencv/ubuntu22.04/cu12.8/py3.10.12/ocv4.10.0/build_opencv/Video_Codec_SDK_12.1.14/Video_Codec_SDK_12.1.14/Samples/AppDecode/AppDecGL/: AppDecGL.cpp  CMakeLists.txt  FramePresenter.h  FramePresenterGLUT.h  FramePresenterGLX.cpp  FramePresenterGLX.h
libraries/opencv/ubuntu22.04/cu12.8/py3.10.12/ocv4.10.0/build_opencv/Video_Codec_SDK_12.1.14/Video_Codec_SDK_12.1.14/Samples/AppEncode/AppEncD3D12/: AppEncD3D12.cpp  CMakeLists.txt
libraries/opencv/ubuntu22.04/cu12.8/py3.10.12/ocv4.10.0/build_opencv/Video_Codec_SDK_12.1.14/Video_Codec_SDK_12.1.14/Samples/AppEncode/AppEncD3D9/: AppEncD3D9.cpp  CMakeLists.txt
libraries/opencv/ubuntu22.04/cu12.8/py3.10.12/ocv4.10.0/build_opencv/Video_Codec_SDK_12.1.14/Video_Codec_SDK_12.1.14/Samples/AppEncode/AppEncGL/: AppEncGL.cpp  CMakeLists.txt  GraphicsUtils.cpp  GraphicsUtils.h
libraries/opencv/ubuntu22.04/cu12.8/py3.10.12/ocv4.10.0/build_opencv/Video_Codec_SDK_12.1.14/Video_Codec_SDK_12.1.14/Samples/AppEncode/AppMotionEstimationVkCuda/: AppMotionEstimationVkCuda.cpp  CMakeLists.txt  NvEnc.cpp  NvEnc.h  utility.cpp  utility.h
libraries/opencv/ubuntu22.04/py3.10.12/: Dockerfile  mytest_gstreamer.py
libraries/opencv/ubuntu22.04/py3.10.12/build_opencv/: Dockerfile  build_opencv.sh
libraries/python/l4t32.7.1/py3.10.11/: Dockerfile
libraries/python/l4t32.7.1/py3.11.3/: Dockerfile
libraries/python/l4t32.7.1/py3.8.0/: Dockerfile
libraries/python/l4t35.4.1/py3.6.15/: Dockerfile
libraries/python/ubuntu18.04/py3.10.11/: Dockerfile
libraries/pytorch/: test.py
libraries/tensorflow/l4t35.4.1/py3.8.10/tf2.11.0/ocv4.8.0/: Dockerfile
libraries/ultralytics/l4t36.2.0/py3.10.12/pt2.2-tf2.15.0-ocv4.10.0/: Dockerfile  docker-compose.yml
libraries/ultralytics/l4t36.3.0/py3.10.12/pt2.2-tf2.15.0-ocv4.10.0/: Dockerfile  docker-compose.yml
libraries/ultralytics/l4t36.3.0/py3.10.12/pt2.3-tf2.15-ocv4.10.0/: Dockerfile  torchaudio-2.3.0+952ea74-cp310-cp310-linux_aarch64.whl  torchvision-0.18.0a0+6043bc2-cp310-cp310-linux_aarch64.whl
libraries/ultralytics/ubuntu22.04/py3.10.12/pt2.2-tf2.15.0-ocv4.10.0/: Dockerfile
libraries/ultralytics/ubuntu22.04/py3.10.12/pt2.4-tf2.15.0-ocv4.10.0/: Dockerfile
(+91 files in other folders)
