[tool.poetry]
name = "jetson-libraries"
version = "0.1.0"
description = ""
authors = ["Federico Lanzani <hello@federicolanzani.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
